--- a/chat/src/main/res/layout/activity_main_chat.xml
+++ b/chat/src/main/res/layout/activity_main_chat.xml
@@ -1,13 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.chat.view.MainDragLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/dl_activity_main_drag_container"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wallpaper_bg">
+    android:background="@color/custom_color_app_bg"
+    android:tag="skin">
 
-    <include layout="@layout/activity_left_container" />
+    <include
+        android:id="@+id/header_layout_id"
+        layout="@layout/header_layout" />
 
-    <include layout="@layout/activity_main_container" />
-</com.example.chat.view.MainDragLayout>
+    <TextView
+        android:id="@+id/tv_main_net"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_below="@id/header_layout_id"
+        android:background="@color/net_work_bg_color"
+        android:gravity="center"
+        android:text="网络连接失败,请检查网络配置"
+        android:textColor="@color/base_color_text_white"
+        android:textSize="18sp"
+        android:visibility="gone" />
+
+    <FrameLayout
+        android:id="@+id/fl_content_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tv_main_net" />
+
+
+</RelativeLayout>
 
 
