--- a/chat/src/main/res/layout/fragment_invitation.xml
+++ b/chat/src/main/res/layout/fragment_invitation.xml
@@ -3,10 +3,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 >
-    <com.example.commonlibrary.baseadapter.swipeview.SwipeMenuRecyclerView
-        android:id="@+id/swrc_new_friend_display"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-    />
+  <com.example.commonlibrary.cusotomview.swipe.CustomSwipeRefreshLayout
+      android:id="@+id/refresh_fragment_invitation_refresh"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+      <com.example.commonlibrary.baseadapter.swipeview.SwipeMenuRecyclerView
+          android:id="@+id/swrc_new_friend_display"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          />
+  </com.example.commonlibrary.cusotomview.swipe.CustomSwipeRefreshLayout>
 
 </RelativeLayout>
