--- a/chat/src/main/res/layout/fragment_share_info.xml
+++ b/chat/src/main/res/layout/fragment_share_info.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/tools"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     app:ignore="NamespaceTypo">
 
 
-
-
     <com.example.commonlibrary.cusotomview.swipe.CustomSwipeRefreshLayout
+        android:id="@+id/refresh_fragment_share_info_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/refresh_fragment_share_info_refresh">
+        android:layout_height="match_parent">
+
         <com.example.commonlibrary.baseadapter.SuperRecyclerView
+            android:id="@+id/srcv_fragment_share_info_display"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/srcv_fragment_share_info_display"/>
+            android:layout_height="match_parent" />
 
     </com.example.commonlibrary.cusotomview.swipe.CustomSwipeRefreshLayout>
 
@@ -25,15 +24,16 @@
         android:id="@+id/fam_share_info_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="15dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginRight="15dp"
+        android:layout_marginBottom="50dp"
         fab:fab_addButtonColorNormal="@color/base_color_text_white"
         fab:fab_addButtonColorPressed="@color/white_pressed"
         fab:fab_addButtonPlusIconColor="@color/half_black"
-        fab:fab_labelStyle="@style/menu_labels_style"
-        android:layout_alignParentRight="true">
+        fab:fab_labelStyle="@style/menu_labels_style">
+
         <com.example.chat.view.fab.FloatingActionButton
             android:id="@+id/fab_share_info_video"
             android:layout_width="wrap_content"
@@ -41,19 +41,20 @@
             fab:fab_colorNormal="@color/blue_semi_transparent"
             fab:fab_colorPressed="@color/blue_semi_transparent_pressed"
             fab:fab_icon="@drawable/ic_videocam_blue_grey_900_24dp"
-            fab:fab_title="视频"/>
+            fab:fab_title="视频" />
 
 
         <com.example.chat.view.fab.FloatingActionButton
             android:id="@+id/fab_share_info_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            fab:fab_title="图片说说"
             fab:fab_colorNormal="@color/pink"
             fab:fab_colorPressed="@color/pink_pressed"
             fab:fab_icon="@drawable/ic_photo_white_24dp"
+            fab:fab_title="图片说说"
 
             />
+
         <com.example.chat.view.fab.FloatingActionButton
             android:id="@+id/fab_share_info_normal"
             android:layout_width="wrap_content"
@@ -61,7 +62,7 @@
             fab:fab_colorNormal="@color/pink"
             fab:fab_colorPressed="@color/pink_pressed"
             fab:fab_icon="@drawable/ic_mode_edit_blue_grey_900_24dp"
-            fab:fab_title="说说"/>
+            fab:fab_title="说说" />
 
 
     </com.example.chat.view.fab.FloatingActionsMenu>
