--- a/commonlibrary/src/main/res/layout/header_layout.xml
+++ b/commonlibrary/src/main/res/layout/header_layout.xml
@@ -26,8 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:tag="skin"
-
-                app:srcCompat="@drawable/ic_back" />
+                app:srcCompat="@drawable/ic_arrow_left" />
 
             <com.example.commonlibrary.cusotomview.RoundAngleImageView
                 android:id="@+id/riv_header_layout_icon"
